added and styled message display section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
       <hr>
       <br>
       <section class="message-list">
-        o
+        <h2>Messages:</h2>
+        <ul class="messages-list">
+            <li>John: I am a man Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quia sit voluptate quibusdam placeat veniam dignissimos corrupti quasi! Dolore ipsam tenetur voluptas illum sint atque nihil totam sed repellendus aliquid?</li>
+            <li>John: I am a man</li>
+            <li>John: I am a man</li>
+            <li>John: I am a man</li>
+        </ul>
       </section>
     </main>
   </body>
